Comments and mini restructure

--- a/AutomobileRepairShop/AutomobileRepairShop.csproj
+++ b/AutomobileRepairShop/AutomobileRepairShop.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Views\Registration\" />
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
